# vapoursynth-dedot

./: meson.build  pyproject.toml  readme.rst
.github/workflows/: build.yml
src/: dedot.cpp
